// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoComplete demo -- autoComplete 1`] = `
.emotion-51 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-51 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-43 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-43 .uc-fe-radio-styletype-default,
.emotion-43 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-43 .uc-fe-radio-styletype-default:last-child,
.emotion-43 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-43 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-43 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-43 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-43 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-43 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-43 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-43 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-29 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-29 > * {
  font-size: 12px;
}

.emotion-29 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-29.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-27.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-27 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-27.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-27 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-25 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-35 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-35 > * {
  font-size: 12px;
}

.emotion-35 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-35.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-35:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-33.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-33 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-55 {
  position: relative;
  display: inline-block;
}

.emotion-55 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-55 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-53 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-53:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-53 .uc-fe-input-wrap,
.emotion-53 .uc-fe-input-prefix,
.emotion-53 .uc-fe-input-suffix,
.emotion-53 input {
  padding: 0 4px;
}

.emotion-53.uc-fe-input-block {
  display: block;
}

.emotion-53 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-53 .uc-fe-input-prefix,
.emotion-53 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-53 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-53 input,
.emotion-53 input:hover,
.emotion-53 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-53 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-53 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-53 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-53 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-51 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-51 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-43 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-43 .uc-fe-radio-styletype-default,
.emotion-43 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-43 .uc-fe-radio-styletype-default:last-child,
.emotion-43 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-43 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-43 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-43 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-43 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-43 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-43 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-43 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-29 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-29 > * {
  font-size: 12px;
}

.emotion-29 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-29.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-27.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-27 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-27.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-27 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-25 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-35 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-35 > * {
  font-size: 12px;
}

.emotion-35 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-35.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-35:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-33.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-33 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-55 {
  position: relative;
  display: inline-block;
}

.emotion-55 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-55 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-53 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-53:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-53 .uc-fe-input-wrap,
.emotion-53 .uc-fe-input-prefix,
.emotion-53 .uc-fe-input-suffix,
.emotion-53 input {
  padding: 0 4px;
}

.emotion-53.uc-fe-input-block {
  display: block;
}

.emotion-53 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-53 .uc-fe-input-prefix,
.emotion-53 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-53 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-53 input,
.emotion-53 input:hover,
.emotion-53 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-53 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-53 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-53 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-53 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div>
  <form
    class="uc-fe-form demo-form emotion-51 emotion-52"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        loading
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        handleSearch
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-43 emotion-44"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-29 emotion-30"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-27 emotion-28"
            >
              <svg
                class="uc-fe-radio-icon emotion-25 emotion-26"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              default
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-35 emotion-30"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-33 emotion-28"
            >
              <svg
                class="uc-fe-radio-icon emotion-25 emotion-26"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              false
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-35 emotion-30"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-33 emotion-28"
            >
              <svg
                class="uc-fe-radio-icon emotion-25 emotion-26"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              custom
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-auto-complete emotion-55 emotion-56"
    >
      <span
        class="uc-fe-input uc-fe-auto-complete-input emotion-53 emotion-54"
      >
        <div
          class="uc-fe-input-wrap"
        >
          <input
            value=""
          />
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`AutoComplete demo -- boundary 1`] = `
Array [
  <h2>
    最小宽度
  </h2>,
  .emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
    class="uc-fe-auto-complete emotion-2 emotion-3"
  >
    <span
      class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    >
      <div
        class="uc-fe-input-wrap"
      >
        <input
          value=""
        />
      </div>
    </span>
  </div>,
  <h2>
    最大宽度
  </h2>,
  .emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
    class="uc-fe-auto-complete emotion-2 emotion-3"
  >
    <span
      class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    >
      <div
        class="uc-fe-input-wrap"
      >
        <input
          value=""
        />
      </div>
    </span>
  </div>,
  <h2>
    滚动
  </h2>,
  .emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
    class="uc-fe-auto-complete emotion-2 emotion-3"
  >
    <span
      class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    >
      <div
        class="uc-fe-input-wrap"
      >
        <input
          value=""
        />
      </div>
    </span>
  </div>,
  <h2>
    无 options
  </h2>,
  .emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
    class="uc-fe-auto-complete emotion-2 emotion-3"
  >
    <span
      class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    >
      <div
        class="uc-fe-input-wrap"
      >
        <input
          value=""
        />
      </div>
    </span>
  </div>,
  <h2>
    错误 options
  </h2>,
  .emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
    class="uc-fe-auto-complete emotion-2 emotion-3"
  >
    <span
      class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    >
      <div
        class="uc-fe-input-wrap"
      >
        <input
          value=""
        />
      </div>
    </span>
  </div>,
]
`;

exports[`AutoComplete demo -- controlled 1`] = `
Array [
  <h2>
    Controlled
  </h2>,
  .emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
    class="uc-fe-auto-complete emotion-2 emotion-3"
  >
    <span
      class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    >
      <div
        class="uc-fe-input-wrap"
      >
        <input
          value="controlled"
        />
      </div>
    </span>
  </div>,
  <h2>
    Uncontrolled
  </h2>,
  .emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
    class="uc-fe-auto-complete emotion-2 emotion-3"
  >
    <span
      class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    >
      <div
        class="uc-fe-input-wrap"
      >
        <input
          value="Item"
        />
      </div>
    </span>
  </div>,
]
`;

exports[`AutoComplete demo -- disabled 1`] = `
.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
  box-shadow: none;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0,
.emotion-0:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-0 .uc-fe-input-suffix,
.emotion-0 .uc-fe-input-prefix {
  color: inherit;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
  box-shadow: none;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0,
.emotion-0:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-0 .uc-fe-input-suffix,
.emotion-0 .uc-fe-input-prefix {
  color: inherit;
}

<div
  class="uc-fe-auto-complete emotion-2 emotion-3"
>
  <span
    class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    disabled=""
  >
    <div
      class="uc-fe-input-wrap"
    >
      <input
        disabled=""
        value="Item"
      />
    </div>
  </span>
</div>
`;

exports[`AutoComplete demo -- handleSearch 1`] = `
Array [
  <h2>
    自定义搜索，忽略大小写匹配
  </h2>,
  .emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
    class="uc-fe-auto-complete emotion-2 emotion-3"
  >
    <span
      class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    >
      <div
        class="uc-fe-input-wrap"
      >
        <input
          value="item"
        />
      </div>
    </span>
  </div>,
  <h2>
    关闭筛选，展示所有选项
  </h2>,
  .emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
    class="uc-fe-auto-complete emotion-2 emotion-3"
  >
    <span
      class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
    >
      <div
        class="uc-fe-input-wrap"
      >
        <input
          value="test"
        />
      </div>
    </span>
  </div>,
]
`;

exports[`AutoComplete demo -- hideOptionsWhenEmpty 1`] = `
.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
  class="uc-fe-auto-complete emotion-2 emotion-3"
>
  <span
    class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
  >
    <div
      class="uc-fe-input-wrap"
    >
      <input
        value="Item"
      />
    </div>
  </span>
</div>
`;

exports[`AutoComplete demo -- loading 1`] = `
.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
  class="uc-fe-auto-complete emotion-2 emotion-3"
>
  <span
    class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
  >
    <div
      class="uc-fe-input-wrap"
    >
      <input
        value=""
      />
    </div>
  </span>
</div>
`;

exports[`AutoComplete demo -- options 1`] = `
.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
  class="uc-fe-auto-complete emotion-2 emotion-3"
>
  <span
    class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
  >
    <div
      class="uc-fe-input-wrap"
    >
      <input
        value="Item"
      />
    </div>
  </span>
</div>
`;

exports[`AutoComplete demo -- popupContainer 1`] = `
.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-6 .uc-fe-card-header:last-child,
.emotion-6 .uc-fe-card-action:last-child,
.emotion-6 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-6 .uc-fe-card-header:first-child,
.emotion-6 .uc-fe-card-action:first-child,
.emotion-6 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-6 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-6 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-6 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-6 .uc-fe-card-header:last-child,
.emotion-6 .uc-fe-card-action:last-child,
.emotion-6 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-6 .uc-fe-card-header:first-child,
.emotion-6 .uc-fe-card-action:first-child,
.emotion-6 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-6 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-6 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-6 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-6 emotion-7"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-4 emotion-5"
      >
        <div
          style="position:relative"
        >
          <div
            class="uc-fe-auto-complete emotion-2 emotion-3"
          >
            <span
              class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
            >
              <div
                class="uc-fe-input-wrap"
              >
                <input
                  value="Item"
                />
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AutoComplete demo -- suggest 1`] = `
.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-2 .uc-fe-auto-complete-input {
  width: 200px;
}

.emotion-2 .uc-fe-auto-complete-loading-icon {
  fill: #3860f4;
}

.emotion-0 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-0:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-0 .uc-fe-input-wrap,
.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix,
.emotion-0 input {
  padding: 0 4px;
}

.emotion-0.uc-fe-input-block {
  display: block;
}

.emotion-0 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .uc-fe-input-prefix,
.emotion-0 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 input,
.emotion-0 input:hover,
.emotion-0 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-0 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div
  class="uc-fe-auto-complete emotion-2 emotion-3"
>
  <span
    class="uc-fe-input uc-fe-auto-complete-input emotion-0 emotion-1"
  >
    <div
      class="uc-fe-input-wrap"
    >
      <input
        value=""
      />
    </div>
  </span>
</div>
`;
